--- a/themes/customized/layouts/partials/header.html
+++ b/themes/customized/layouts/partials/header.html
@@ -5,9 +5,6 @@
         {{ with .Site.Params.siteLogoImage }}
           <img class="logo" alt="logo" src="{{ . | absURL }}" />
         {{ end }}
-        {{ if .Site.Title }}
-          <span class="name">{{ .Site.Title | safeHTML }}</span>
-        {{ end }}
       </a>
     {{ end }}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,13 +12,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
-        {{ with .Site.GetPage "home" }}
-          <!-- class active -->
-          <li class="nav-item"><a class="nav-link" href="{{ .Permalink }}">{{ i18n "blog" }}</a></li>
-        {{ end }}
-
+        {{ $current := . }}
         {{ range $index, $menuItem := .Site.Menus.main }}
-        <li class="nav-item">
+        {{ $active := or ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "main" .) }}
+        {{ $active = or $active (eq .Name $current.Title) }}
+        {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "posts")) }}
+        {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "tags")) }}
+        {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "categories")) }}
+        <li class="nav-item {{ if $active }}active{{ end }}">
           {{ with $menuItem.Page }}
             <a class="nav-link" href="{{ .Permalink }}">{{ with $menuItem.Pre }}{{ . | safeHTML }}{{ end }}{{ $menuItem.Name }}</a>
           {{ else }}
@@ -33,7 +31,8 @@
           {{ end }}
         </li>
         {{ end }}
-
+      </ul>
+      <ul class="navbar-nav languages">
         <!-- Languages -->
         {{ if .IsTranslated }}
         {{- $last := (sub (len .Translations) 1) -}}
