--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -1,3 +1,6 @@
+@import 'fonts';
+
+/* color palette */
 $color-background: #fff;
 
 $color-grey-100: #191D1F;
@@ -13,16 +16,26 @@ $color-grey-10: #F4F4F4;
 
 $color-secondary: #EDDCAC;
 
+/* font family */
 $font-family: notosans-regular, sans-serif;
+$font-family-bold: notosans-bold;
+$font-family-italic: notosans-italic;
+$font-family-bold-italic: notosans-bold-italic;
+
+$font-family-special: princess-sofia;
+
+/* font size */
 $font-size-h1: 28px;
 $font-size-h2: 21px;
 $font-size-text: 16px;
 $font-size-text-small: 12px;
 
+/* spacing */
 $spacing-s: 8px;
 $spacing-m: 16px;
 $spacing-l: 24px;
 $spacing-xl: 32px;
 
+/* specials */
 $header-height: 80px;
 $header-border: 4px;
