--- a/themes/customized/assets/sass/fonts.scss
+++ b/themes/customized/assets/sass/fonts.scss
@@ -1,7 +1,4 @@
-/*
- * Princess Sofia
-================================================================================ */
-
+/* Princess Sofia */
 @font-face {
   font-family: 'princess-sofia';
   src: url('/fonts/PrincessSofia-Regular.ttf');
@@ -11,47 +8,40 @@
 }
 
 
-/*
- * Noto Sans
-================================================================================ */
-
+/* Roboto */
 @font-face {
-  font-family: 'notosans-bold';
-  src: url('/fonts/notosans/notosans-bold-webfont.eot');
-  src: url('/fonts/notosans/notosans-bold-webfont.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/notosans/notosans-bold-webfont.woff') format('woff'),
-       url('/fonts/notosans/notosans-bold-webfont.ttf') format('truetype'),
-       url('/fonts/notosans/notosans-bold-webfont.svg#noto_sansbold') format('svg');
+  font-family: 'roboto-bold';
+  src: url('/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'notosans-bold-italic';
-  src: url('/fonts/notosans/notosans-bolditalic-webfont.eot');
-  src: url('/fonts/notosans/notosans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/notosans/notosans-bolditalic-webfont.woff') format('woff'),
-       url('/fonts/notosans/notosans-bolditalic-webfont.ttf') format('truetype'),
-       url('/fonts/notosans/notosans-bolditalic-webfont.svg#noto_sansbold_italic') format('svg');
+  font-family: 'roboto-bolditalic';
+  src: url('/fonts/Roboto/Roboto-BoldItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'notosans-italic';
-  src: url('/fonts/notosans/notosans-italic-webfont.eot');
-  src: url('/fonts/notosans/notosans-italic-webfont.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/notosans/notosans-italic-webfont.woff') format('woff'),
-       url('/fonts/notosans/notosans-italic-webfont.ttf') format('truetype'),
-       url('/fonts/notosans/notosans-italic-webfont.svg#noto_sansitalic') format('svg');
+  font-family: 'roboto-italic';
+  src: url('/fonts/Roboto/Roboto-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'notosans-regular';
-  src: url('/fonts/notosans/notosans-regular-webfont.eot');
-  src: url('/fonts/notosans/notosans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/notosans/notosans-regular-webfont.woff') format('woff'),
-       url('/fonts/notosans/notosans-regular-webfont.ttf') format('truetype'),
-       url('/fonts/notosans/notosans-regular-webfont.svg#noto_sansregular') format('svg');
+  font-family: 'roboto-regular';
+  src: url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'roboto-medium';
+  src: url('/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'roboto-thin';
+  src: url('/fonts/Roboto/Roboto-Thin.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
