--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -18,10 +18,10 @@ $color-secondary: #EDDCAC;
 $color-secondary-darker: #D4C49B;
 
 /* font family */
-$font-family: notosans-regular, sans-serif;
-$font-family-bold: notosans-bold;
-$font-family-italic: notosans-italic;
-$font-family-bold-italic: notosans-bold-italic;
+$font-family: roboto-regular, sans-serif;
+$font-family-bold: roboto-bold;
+$font-family-italic: roboto-italic;
+$font-family-bold-italic: roboto-bolditalic;
 
 $font-family-special: princess-sofia;
 
