--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -26,6 +26,8 @@ $font-family-bold-italic: roboto-bolditalic;
 $font-family-special: princess-sofia;
 
 /* font size */
+$font-size-display: 42px;
+$font-size-header: 34px;
 $font-size-h1: 28px;
 $font-size-h2: 21px;
 $font-size-text: 16px;
@@ -39,4 +41,8 @@ $spacing-xl: 32px;
 
 /* specials */
 $header-height: 80px;
-$border-size: 4px;
+$logo-height: 64px;
+$line-size: 4px;
+
+$button-border-radius: 4px;
+
