--- a/themes/customized/layouts/_default/baseof.html
+++ b/themes/customized/layouts/_default/baseof.html
@@ -12,13 +12,7 @@
 </head>
 <body>
   {{- partial "header.html" . -}}
-  {{ if .Resources.GetMatch "header" }}
-  <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ (.Resources.GetMatch "header").Permalink }}'); background-position: center; background-size: cover; ">
-  {{ else if .Site.Params.headerImage }}
-  <div class="header-container" style="background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{{ .Site.Params.headerImage | absURL }}'); background-position: center; background-size: cover;">
-  {{ else }}
-  <div class="header-container gradient">
-  {{ end }}
+  <div id="header-container">
   {{ block "header" . }}{{- end }}
   </div>
   <main>
