--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -67,9 +67,10 @@ main {
     }
 
     .post .post-thumb img,
-    .post-thumb img {
-        height: 246px;
-        width: 100%;
+    .post-thumb img,
+    img {
+        height: auto;
+        max-width: 100%;
         object-fit: cover;
     }
 }
