--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -35,6 +35,21 @@ li:hover a, li:active a, li a:hover, li a:active {
     text-decoration: none;
 }
 
+.tagcloud a,
+.button {
+    padding: $spacing-s $spacing-m;
+
+    border-radius: $button-border-radius;
+    background: $color-secondary;
+    color: $color-grey-100;
+
+    &:hover {
+        color: $color-white;
+        background: $color-secondary-darker;
+        text-decoration: none;
+    }
+}
+
 /* custom styling for the cookie consent message */
 .cc-revoke {
     display: none;
