--- a/themes/customized/layouts/_default/section.html
+++ b/themes/customized/layouts/_default/section.html
@@ -18,8 +18,8 @@
     
     {{ range $paginator.Pages -}}
     <article class="post">
-      <div class="entry-header cf">
-        <h1><a href="{{ .Permalink }}" title="">{{ .Title }}</a></h1>
+      <div class="post-header">
+        <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
         <p class="post-meta">
           <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
           {{ with .Params.categories -}}
@@ -48,10 +48,14 @@
           </div>
         {{ end }}
       </a>
-      <div class="post-content">
-          <p>{{ .Description }}</p>
+      <div class="post-description">
+        <a href="{{ .Permalink }}" title="">
+          {{ .Description }}
+        </a>
       </div>
-      <!--<a href="{{ .Permalink }}" class="button">Read more...</a>-->
+      <div class="post-button">
+        <a href="{{ .Permalink }}" class="button">{{i18n "readMore_link" }}</a>
+      </div>
     </article>
     {{ end }}
 
